[gd_scene load_steps=16 format=3 uid="uid://b6klf86jkoygq"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_crjbj"]
[ext_resource type="Texture2D" uid="uid://blo03oipj2iv3" path="res://Sprites/Player/RunAnim/adventurer-run2-00.png" id="1_hw835"]
[ext_resource type="Texture2D" uid="uid://87g7bro36ofx" path="res://Sprites/Player/JumpAnim/adventurer-jump-00.png" id="2_8jasc"]
[ext_resource type="Texture2D" uid="uid://ce0nv2drou27e" path="res://Sprites/Player/RunAnim/adventurer-run2-01.png" id="2_g6gis"]
[ext_resource type="Texture2D" uid="uid://c1plen7tf541v" path="res://Sprites/Player/RunAnim/adventurer-run2-02.png" id="3_bnm74"]
[ext_resource type="Texture2D" uid="uid://dctgdb6h200eq" path="res://Sprites/Player/JumpAnim/adventurer-jump-01.png" id="3_x3o3m"]
[ext_resource type="Texture2D" uid="uid://dfv7b42otnxpm" path="res://Sprites/Player/JumpAnim/adventurer-jump-02.png" id="4_pbmjf"]
[ext_resource type="Texture2D" uid="uid://djp48f6de4x4d" path="res://Sprites/Player/RunAnim/adventurer-run2-03.png" id="4_w2hrj"]
[ext_resource type="Texture2D" uid="uid://cd7y83pe8hwpy" path="res://Sprites/Player/RunAnim/adventurer-run2-04.png" id="5_1dpfm"]
[ext_resource type="Texture2D" uid="uid://c3dgud5f56xij" path="res://Sprites/Player/JumpAnim/adventurer-jump-03.png" id="5_4kjtx"]
[ext_resource type="Texture2D" uid="uid://bwe152i4g2woa" path="res://Sprites/Player/RunAnim/adventurer-run2-05.png" id="6_1e0rk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kvxoo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8jasc")
}, {
"duration": 1.0,
"texture": ExtResource("3_x3o3m")
}, {
"duration": 1.0,
"texture": ExtResource("4_pbmjf")
}, {
"duration": 1.0,
"texture": ExtResource("5_4kjtx")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_hw835")
}, {
"duration": 1.0,
"texture": ExtResource("2_g6gis")
}, {
"duration": 1.0,
"texture": ExtResource("3_bnm74")
}, {
"duration": 1.0,
"texture": ExtResource("4_w2hrj")
}, {
"duration": 1.0,
"texture": ExtResource("5_1dpfm")
}, {
"duration": 1.0,
"texture": ExtResource("6_1e0rk")
}],
"loop": true,
"name": &"run",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0me4d"]
size = Vector2(53, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w3l88"]
size = Vector2(40, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pvlvc"]
size = Vector2(49, 1.5)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_crjbj")

[node name="PlayerAnimator" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_kvxoo")
animation = &"run"
frame_progress = 0.437062

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_0me4d")

[node name="JumpingCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(5, 7.5)
shape = SubResource("RectangleShape2D_w3l88")

[node name="detectBoost" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectBoost"]
position = Vector2(7.5, 33)
shape = SubResource("RectangleShape2D_pvlvc")

[connection signal="area_entered" from="detectBoost" to="." method="_on_detect_boost_area_entered"]
[connection signal="body_entered" from="detectBoost" to="." method="_on_detect_boost_body_entered"]
[connection signal="body_exited" from="detectBoost" to="." method="_on_detect_boost_body_exited"]
